version/0.18/_sources/api/solver/_autosummary/settings/lines.rst.txt
:orphan:

.. _lines:

lines
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.lines.lines
    :show-inheritance:

.. rubric:: Methods

==========================================   ==============================

Method                                                              Summary

==========================================   ==============================
:ref:`list_properties <list_properties_1>`       'list_properties' command.

==========================================   ==============================

.. rubric:: Named object type

:ref:`lines_child <lines_child>`


.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`curves <curves>`       'curves' child.

======================   ===================

