version/0.24/_sources/api/solver/_autosummary/settings/lines.rst.txt
:orphan:

.. _lines:

lines
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.lines.lines
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`lines_child <lines_child>`


.. rubric:: Included in:

========================   ===================================================

Parent                                                                 Summary

========================   ===================================================
:ref:`curves <curves_1>`       Choose line, marker style and color for Curves.

========================   ===================================================

